--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -5,7 +5,19 @@ metadata:
   name: manager-role
 rules:
 - apiGroups:
-  - cache.my.domain
+  - apps
+  resources:
+  - deployments
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - cache.example.com
   resources:
   - memcacheds
   verbs:
@@ -17,16 +29,31 @@ rules:
   - update
   - watch
 - apiGroups:
-  - cache.my.domain
+  - cache.example.com
   resources:
   - memcacheds/finalizers
   verbs:
   - update
 - apiGroups:
-  - cache.my.domain
+  - cache.example.com
   resources:
   - memcacheds/status
   verbs:
   - get
   - patch
   - update
+- apiGroups:
+  - ""
+  resources:
+  - events
+  verbs:
+  - create
+  - patch
+- apiGroups:
+  - ""
+  resources:
+  - pods
+  verbs:
+  - get
+  - list
+  - watch
